DocuSign For Salesforce/objects/DocuSign_Envelope__c.object
<CustomObject>
    <description>DocuSign Envelope for Salesforce</description>
    <fields>
        <fullName>ChatterEnvCompletedText__c</fullName>
        <label>Envelope Completed Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterEnvCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Envelope Completed Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChatterEnvDeclinedText__c</fullName>
        <label>Envelope Declined Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterEnvDeclined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Envelope Declined Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChatterEnvDeliveredText__c</fullName>
        <label>Envelope Delivered Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterEnvDelivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Envelope Delivered Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChatterEnvSentText__c</fullName>
        <label>Envelope Sent Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterEnvSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Envelope Sent Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChatterEnvVoidedText__c</fullName>
        <label>Envelope Voided Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterEnvVoided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Envelope Voided Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChatterRecipCompletedText__c</fullName>
        <label>Recipient Completed Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterRecipCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient Completed Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChatterRecipDeclinedText__c</fullName>
        <label>Recipient Declined Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterRecipDeclined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient Declined Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChatterRecipDeliveredText__c</fullName>
        <label>Recipient Delivered Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterRecipDelivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient Delivered Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChatterRecipSentText__c</fullName>
        <label>Recipient Sent Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterRecipSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient Sent Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChatterRecipSignedText__c</fullName>
        <label>Recipient Signed Chatter Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatterRecipSigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient Signed Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChatterUpdatesEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check to show chatter during DocuSign signature workflow.</inlineHelpText>
        <label>Enable Chatter Status Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact2eSignDoc01__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact to eSign Document</description>
        <inlineHelpText>Select a Contact from Salesforce to be a DocuSign Recipient/Signer.  Only Contacts with valid email addresses can be used as DocuSign Recipients.</inlineHelpText>
        <label>Contact to eSign Document</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DocuSign Envelope01</relationshipLabel>
        <relationshipName>DocuSign_Envelope01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Field_1_Name__c</fullName>
        <label>Custom Field 1 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_1_Value__c</fullName>
        <label>Custom Field 1 Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_1__c</fullName>
        <description>Custom Field to pass data via Envelope</description>
        <inlineHelpText>Custom Field to pass data via Envelope</inlineHelpText>
        <label>Custom Field 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_2_Name__c</fullName>
        <label>Custom Field 2 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_2_Value__c</fullName>
        <label>Custom Field 2 Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_2__c</fullName>
        <description>Custom Field to pass data via Envelope</description>
        <inlineHelpText>Custom Field to pass data via Envelope</inlineHelpText>
        <label>Custom Field 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_3_Name__c</fullName>
        <label>Custom Field 3 Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_3_Value__c</fullName>
        <label>Custom Field 3 Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Field_3__c</fullName>
        <description>Custom Field to pass data via Envelope</description>
        <inlineHelpText>Custom Field to pass data via Envelope</inlineHelpText>
        <label>Custom Field 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_Prior_to_Warn_of_expiration__c</fullName>
        <description>An email message to alert recipients that a deadline approaches for completing an envelope. This is sent only to recipients who have not yet completed the envelope.</description>
        <inlineHelpText>Indicate how many days prior to expiration you want an email message to alert recipients that a deadline approaches for completion. This is sent only to recipients who have not yet completed the transaction.</inlineHelpText>
        <label>Warn of expiration in N day(s) prior</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_before_Envelope_is_Expired_Voided__c</fullName>
        <description>Days before Envelope is Expired/Voided</description>
        <inlineHelpText>Indicate the number of days until this transaction is expired.</inlineHelpText>
        <label>Expire/Void Envelope in N day(s)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocuSign_Email_Message__c</fullName>
        <defaultValue>&quot;SENT TO YOU BY: &quot; &amp; $User.FirstName &amp; &quot; &quot; &amp; $User.LastName &amp; &quot; &quot; &amp; $User.Email &amp; &quot; with the DocuSign Electronic Signature Service&quot; &amp; BR() &amp; BR() &amp; &quot;I am sending you this request for your electronic signature, please review and electronically sign by following the link below. &quot; &amp; BR() &amp; BR() &amp; BR() &amp; &quot;Thank You,  &quot;  &amp; BR() &amp; BR() &amp; $User.FirstName &amp; &quot; &quot; &amp;  $User.LastName &amp; &quot; &quot; &amp; $User.Email</defaultValue>
        <description>DocuSign Email Message</description>
        <inlineHelpText>Edit this Email Message Text (up to 2,000 characters) and it will appear in the notification to sign for your DocuSign Recipient.</inlineHelpText>
        <label>DocuSign Email Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocuSign_Email_Subject__c</fullName>
        <defaultValue>&quot;Documents for your DocuSign Signature&quot;</defaultValue>
        <description>DocuSign Email Subject</description>
        <inlineHelpText>Change this default Email Subject text and it will appear as the Subject Line in the notification to Sign for your DocuSign Recipients.</inlineHelpText>
        <label>DocuSign Email Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Envelope_ID__c</fullName>
        <description>DocuSign Envelope ID</description>
        <inlineHelpText>DocuSign Envelope ID</inlineHelpText>
        <label>DocuSign Envelope ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Envelope_Sent__c</fullName>
        <description>DocuSign Envelope Sent</description>
        <inlineHelpText>DocuSign Envelope Sent</inlineHelpText>
        <label>DocuSign Envelope Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DocumentID__c</fullName>
        <defaultValue>&quot;Select Document ID&quot;</defaultValue>
        <description>Document ID</description>
        <inlineHelpText>Document ID</inlineHelpText>
        <label>DocumentID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <description>Document Name</description>
        <inlineHelpText>This is a list of PDF Documents located in your Organization&apos;s Salesforce &quot;Documents Tab&quot;.  In order to send with DocuSign you must add a PDF to any of the folders within your Documents Tab in Salesforce.  To Send with other Formats click &quot;Learn More&apos;.</inlineHelpText>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expire_Void_Envelope__c</fullName>
        <defaultValue>false</defaultValue>
        <description>At times, you may need to encourage your recipients to complete an envelope more rapidly. . After an envelope expires, DocuSign Professional voids the envelope and sends a notification to both sender and recipient.</description>
        <inlineHelpText>At times, you may need to encourage your recipients to complete an envelope more rapidly. After an envelope expires, DocuSign for Salesforce voids the envelope and sends a notification to both sender and recipient.</inlineHelpText>
        <label>Expire/Void Envelope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_agree_to_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>I agree to Terms</description>
        <inlineHelpText>I agree to Terms</inlineHelpText>
        <label>I agree to Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_will_Sign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>I will also Sign</description>
        <inlineHelpText>Click this checkbox if you would like to be added as an additional Recipient/Signer on this document.  If you leave this unchecked you will receive notification that the Contact has DocuSigned but will not be able to Sign it yourself.</inlineHelpText>
        <label>I will also Sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead2eSignDoc01__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quick Lead to eSign Document</description>
        <inlineHelpText>Quick Lead to eSign Document</inlineHelpText>
        <label>Lead to eSign Document</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DocuSign Envelopes</relationshipLabel>
        <relationshipName>DocuSign_Envelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reminder_Interval__c</fullName>
        <description>Reminder Interval in Days to remind them
to review and complete the document(s).</description>
        <inlineHelpText>Indicate how many days should pass before the first reminder is sent</inlineHelpText>
        <label>Send Reminder in N day(s)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reminder_Repeat_Interval_in_Days__c</fullName>
        <description>Reminder Repeat Interval in Days to remind them
to review and complete the document(s).</description>
        <inlineHelpText>Indicate how often (in days) the reminder should repeat until the transaction is complete.</inlineHelpText>
        <label>Repeat every N day(s) until complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should a reminder be sent periodically to recipients
who have not yet completed the envelope?</description>
        <inlineHelpText>Check this box to have an email reminder sent to recipients of the envelope who have not yet completed their task.</inlineHelpText>
        <label>Remind signers via email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <description>Sender Name</description>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the name of the Salesforce User who created this DocuSign transaction.</inlineHelpText>
        <label>Sender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object_Parent__c</fullName>
        <label>Source_Object_Parent</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <description>Source Object</description>
        <inlineHelpText>Source Object</inlineHelpText>
        <label>Source Object</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>DocuSign Envelope</label>
    <nameField>
        <displayFormat>DSE-{0000000}</displayFormat>
        <label>DocuSign Envelope</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Envelopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>